human_written_tests/WebAssembly/processed_control_flow_validation/test_call_14.wast
(assert_invalid
  (module
    (func $type-second-empty-in-loop
      (loop (call 1 (i32.const 0)))
    )
    (func (param i32 i32))
  )
  "type mismatch"
)